- Carousels now fully configurable as part of dynamic content - Carousel editing now embedded within site edit layout - Big rewrite of carousel editor and tag editing to allow story selection to be targetted to specific carousel   - baseUrl and contentMetaDataType replaced by rootFolder and name. Needs migration of imagesHome to images-home and imagesSocialEvents images-social-events - Aspect ratio now saveable as default in carousel data - Large scale Content metadata refactor to save all carousels in carousels RootFolder. Api path no longer saved in metadata. - Walks programme now has dynamic content in page header - Resized h1-h6 to match Ramblers styles

--- a/projects/ngx-ramblers/src/app/assets/styles/frames.sass
+++ b/projects/ngx-ramblers/src/app/assets/styles/frames.sass
@@ -59,6 +59,16 @@
   margin: 6px 0px 12px 0px
   border-radius: 6px
 
+.thumbnail-site-edit
+  @extend .img-thumbnail
+  padding: 13px 10px 13px 15px
+  border-radius: 6px
+
+.thumbnail-site-edit-top-bottom-margins
+  @extend .thumbnail-site-edit
+  margin: 6px 0px 12px 0px
+
+
 .thumbnail-2
   padding: 13px 10px 12px 15px
   margin: 18px 0px 20px 0px
