--- a/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content.html
+++ b/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content.html
@@ -1,4 +1,5 @@
 <app-dynamic-content-site-edit [pageContent]="pageContent"
+                               [contentPathReadOnly]="contentPathReadOnly"
                                [notify]="notify"
                                [queryCompleted]="queryCompleted"
                                [contentPath]="contentPath"
