--- a/projects/ngx-ramblers/src/app/pages/admin/system-settings/image/system-image-edit.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/system-settings/image/system-image-edit.html
@@ -54,7 +54,7 @@
           <fa-icon [icon]="faEdit"></fa-icon>
         </div>
         <div (click)="delete()" class="badge-button"
-             [tooltip]="'Delete ' + image.originalFileName + ' from collection of ' + imageType"
+             [tooltip]="'Delete ' + image.originalFileName + ' from collection of ' + rootFolder"
              delay=500>
           delete
           <fa-icon [icon]="faRemove"></fa-icon>
