--- a/projects/ngx-ramblers/src/app/pages/social/information/social-information.component.html
+++ b/projects/ngx-ramblers/src/app/pages/social/information/social-information.component.html
@@ -1,6 +1,6 @@
 <div class="col-sm-6">
   <app-markdown-editor name="socialEventsInformation"
                        description="social events information"></app-markdown-editor>
-  <a *ngIf="display.allow.contentEdits" href="image-editor/imagesSocialEvents" title="Edit images"
+§  <a *ngIf="display.allow.contentEdits" href="/admin/carousel-editor/imagesSocialEvents" title="Edit images"
      class="button-form button-form-right rounded">Edit images</a>
 </div>
