--- a/projects/ngx-ramblers/src/app/modules/common/login-required/login-required.html
+++ b/projects/ngx-ramblers/src/app/modules/common/login-required/login-required.html
@@ -3,7 +3,11 @@
     <div class="container">
       <div class="lead">
         <img src="/assets/images/ramblers/icons/ramblers_icon_9_close_x_rgb.png"/>
-        You need to be logged in to view this page. Click the <a ramblers-list href="login">Login</a> link if you have a login for {{group?.shortName}}</div>
+        You need to be logged in to view this page. Click the <a ramblers-list href="login">Login</a> link if you have a
+        login for {{group?.shortName}}</div>
     </div>
   </div>
+</ng-container>
+<ng-container *ngIf="loggedIn">
+  <ng-content></ng-content>
 </ng-container>
