--- a/projects/ngx-ramblers/src/app/pages/committee/home/committee-home.component.html
+++ b/projects/ngx-ramblers/src/app/pages/committee/home/committee-home.component.html
@@ -1,6 +1,6 @@
 <app-page>
   <app-committee-year [committeeYear]="committeeYear"  [notify]="notify"></app-committee-year>
-  <app-dynamic-content [anchor]="'action-buttons'"></app-dynamic-content>
+  <app-dynamic-content [anchor]="'action-buttons'" [contentPathReadOnly]="true"></app-dynamic-content>
   <div class="row">
     <div class="col-sm-12">
       <div *ngIf="showAlertMessage()" class="row">
